# eupnea-v2

./: .gitignore  CLAUDE.md  TASKS.md  config.yaml  pyproject.toml
.claude/: launch.json
docs/: architecture.md
projects/: __init__.py
projects/cafe/: __init__.py  assets.py  project.py  scene.yaml
projects/coffee_shop/: __init__.py  assets.py  project.py  scene.yaml
projects/micro/: __init__.py
projects/micro/group/: __init__.py  project.py
projects/micro/mood/: __init__.py  project.py
projects/micro/plan/: __init__.py  project.py
projects/micro/queue/: __init__.py  project.py
projects/micro/service/: __init__.py  project.py
projects/micro/venue/: __init__.py  project.py
simsy/: __init__.py  config.py  project.py  run.py  scene.py  server.py  sim.py
simsy/agents/: agent.py  spawning.py
simsy/ai/: behavior_tree.py  controller.py  fsm.py  plan.py  utility.py
simsy/components/: __init__.py  representation.py  state.py
simsy/core/: context.py  events.py
simsy/nav/: astar.py  grid.py  locomotion.py  orca.py
simsy/world/: entity.py  registry.py  smart_object.py
tests/: test_cafe.py  test_components.py  test_config.py  test_determinism.py  test_group.py  test_mood.py  test_nav.py  test_orca.py  test_plan.py  test_queue.py  test_scene_io.py  test_scheduling.py  test_service.py  test_venue.py
viewer/: editor.html  index.html
